# CaustiX

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/: config.hpp  fluid_shading.cuh  main.cpp  optix_params.h  pathtracer.hpp  shaders.cu
